--- a/src/web/css/loading.css
+++ b/src/web/css/loading.css
@@ -6,6 +6,7 @@ body {
   height: 100%;
   overflow: hidden;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -13,7 +14,7 @@ body {
 .loading {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,6 +33,69 @@ svg {
   height: 100%;
   background: rgba(255, 255, 255, 0);
   z-index: 10;
+}
+
+.log-container {
+  width: 100%;
+  height: 50%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.log-entry {
+  width: 100%;
+  margin: auto;
+  -webkit-user-select: none;
+}
+
+.datetime{
+  margin: auto;
+  width: max-content;
+  height: auto;
+  display: flex;
+  color: #fff;
+  background: #2E94E3;
+  font-family: "Segoe UI", sans-serif;
+  padding: 15px 10px;
+  border: 3px solid #2E94E3;
+  border-radius: 5px;
+  transition: 0.5s;
+  transition-property: background, box-shadow;
+}
+
+
+.date{
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.time{
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.message{
+  font-size: 50px;
+  margin: auto;
+  margin: auto;
+  width: max-content;
+  height: auto;
+}
+
+.message span {
+  width: max-content;
+}
+
+.time span{
+  position: relative;
+  margin: 0 6px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 3px;
 }
 
 .animatebounce {
